--- a/flex_style.css
+++ b/flex_style.css
@@ -1,18 +1,363 @@
 * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
+    /*font-family: 'Poppins', serif;*/
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .header {
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4, 9, 30, 0.7), url('pins/2cf7d5e1d1d67884e5763cced037cb1e.jpg'));
+    background-image: url(websitepins/snapedit_1710062476841.jpeg);
     background-position: center;
     background-size: cover;
     position: relative;
-    color: white; 
-    text-align: center; 
+}
+
+.header::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.30)); 
+}
+
+nav {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color:transparent;
+    z-index: 1000;
     display: flex; 
+    justify-content: space-between; 
+    align-items: center;
+    padding: 2% 6%;
+}
+
+.nav-links {
+    display: flex;
+    align-items: center;
+}
+
+.nav-links ul {
+    list-style-type: none;
+    display: flex;
+    margin: 0; 
+}
+
+.nav-links ul li {
+    margin-right: 20px;
+}
+
+.nav-links ul li a {
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+    transition: color 0.3s ease;
+}
+
+.nav-links ul li a:hover {
+    color: #632828;
+    font-size: 12;
+}
+
+nav img {
+    max-width: 75px;
+    height: auto; 
+    background-color: transparent;
+    border-radius: 50%;
+    margin-right: 20px;
+
+}
+
+.text-box{
+    width:90%;
+    color: #221818;
+    position: absolute;
+    top: 35%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+ 
+.text-box h1{
+    font-size: 58px;
+}
+
+.text-box p{
+    margin: 10px 0 40px;
+    font-size: 14px;
+    margin-bottom:40px;
+}
+
+.disc-btn{
+    display:inline-block;
+    text-decoration: none;
+    color:#220a0a;
+    border: 2px solid #2c1616;
+    padding: 10px 30px;
+    font-size: 13px;
+    background: transparent;
+    position:relative;  
+    cursor:pointer;
+}
+
+.disc-btn:hover{
+    border: 1px solid #2e1111;
+    background: #471717;
+    transition:0.5s;
+}
+
+.aboutme{
+    width:80%;
+    margin:auto;
+    text-align:center;
+    padding-top:100px;
+}
+h1{
+    font-size:36px;
+    font: weight 600;  
+}
+p{
+    color:#220a0a;
+    font-size:14px;
+    font-weight:300px;
+    line-height:22px;
+    padding:10px;
+}
+
+.row{
+    margin-top: 5%;
+    display:flex;
+    justify-content: space-between;
+}
+
+.about-me{
+    flex-basis: 31%;
+    background:#eba15cfd;
+    border-radius:10px;
+    margin-bottom:5px;
+    padding:20px 12px;
+    box-sizing:border-box;
+    transition: 0.3s;
+}
+
+h2{
+    text-align: center;
+    font-weight: 600;
+    margin:10px;
+}
+
+.about-me:hover{
+    box-shadow: 0 0 20px 0px rgba(126, 67, 19, 0.966);
+}
+
+@media(max-width:700px){
+    .row{
+        flex-direction:column;
+    }
+}
+
+.passion {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding:20px 12px;
+}
+
+.row-1 {
+    display: flex;
     justify-content: center;
-    align-items: center; 
+    width: 100%;
+}
+
+.passion-col {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 80%;
+}
+
+.img-container {
+    width: 70%;
+    padding: 0%;
+  }
+  
+  .img-container-img {
+    border-radius: 10px;
+    max-width: 95%;
+    height: auto;
+    width: 100%;
+    aspect-ratio: 1.2;
+  }
+
+.text-container {
+    width: 45%;
+    padding: 10px;
+    text-align: justify;
+}
+
+.text-container h2 {
+    color: #5a1820;
+    text-align: center;
+    font-weight: 700;
+    margin:10px;
+    
+}
+
+.favbands{
+    width:80%;
+    margin:auto;
+    text-align:center;
+    padding-top:50px;
+}
+.fav-bands h2 {
+    font-size: 24px;
+    font-weight: 700;
+    color: #000000;
+    text-align: center;
+    padding: 30px 0;
+    margin-top: 0px;
+}
+
+.favebands p {
+    line-height: 22px;
+    padding: 10px;
+    margin-top: 0;
+    padding: 10px
+}
+
+.row-2{
+    margin-top: 5%;
+    display:flex;
+    justify-content: space-between;
+}
+
+h2{
+    text-align: center;
+    font-weight: 600;
+    margin:10px;
+    
+}
+
+.fav-bands:hover{
+    box-shadow: 0 0 20px 0px rgba(126, 67, 19, 0.966);
+}
+
+.image-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    align-items: center;
+  }
+  
+  .image-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    aspect-ratio: 1 / 1;
+    border-radius: 8%;
+    padding: 20px;
+  }
+  
+  @media (max-width: 768px) {
+    .image-container {
+      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    }
+  }
+  
+  @media (max-width: 480px) {
+    .image-container {
+      grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    }
+  }
+
+
+.favbands, .favmovies, .favanime {
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 50px;
+}
+
+.favbands h1, .favmovies h1, .favanime h1 {
+    font-size: 34px;
+    font-weight: 700;
+    color: #000000;
+    text-align: center;
+    padding: 30px 0;
+    margin-top: 0px;
+}
+
+.favbands p, .favmovies p, .favanime p {
+    line-height: 22px;
+    padding: 10px;
+    margin-top: 0;
+    padding: 10px;
+}
+
+.row-2, .row-3, .row-4 {
+    margin-top: 5%;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap; 
+}
+
+
+.fav-bands {
+    flex-basis: 31%;
+    background: #e27561fd; 
+    border-radius: 10px;
+    margin-bottom: 5px;
+    padding: 20px 12px;
+    box-sizing: border-box;
+    transition: 0.3s;
+}
+
+.fav-movie {
+    flex-basis: 31%;
+    background: #64ce8dfd; 
+    border-radius: 10px;
+    margin-bottom: 5px;
+    padding: 20px 12px;
+    box-sizing: border-box;
+    transition: 0.3s;
+}
+
+.fav-anime {
+    flex-basis: 31%;
+    background: #e68ea8fd; 
+    border-radius: 10px;
+    margin-bottom: 5px;
+    padding: 20px 12px;
+    box-sizing: border-box;
+    transition: 0.3s;
+}
+
+
+
+.fav-bands:hover, .fav-movie:hover, .fav-anime:hover {
+    box-shadow: 0 0 20px 0px rgba(126, 67, 19, 0.966);
+}
+
+@media (max-width: 768px) {
+    .fav-bands, .fav-movie, .fav-anime {
+        flex-basis: calc(50% - 20px); 
+    }
+}
+
+@media (max-width: 480px) {
+    .fav-bands, .fav-movie, .fav-anime {
+        flex-basis: calc(100% - 20px);
+    }
+}
+
+.lifestyle{
+    text-align: center;
+}
+.lifestyle-1{
+    flex-direction:column-reverse;
 }
